# ufs-forensic

./: .gitignore  .gitleaks.toml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  mkdocs.yml  release-plz.toml  renovate.json
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
core/: CHANGELOG.md  Cargo.toml
core/src/: bytes.rs  cg.rs  dir.rs  error.rs  file.rs  inode.rs  lib.rs  superblock.rs  vfs.rs
core/tests/: dir_oracle.rs  file_indirect.rs  file_oracle.rs  fixture.rs  inode_oracle.rs  superblock_oracle.rs
docs/: PRD.md  RESEARCH.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-build-from-scratch-pure-rust-ufs-reader.md  0002-two-crate-reader-analyzer-split.md  0003-ufs-core-crate-name-import-path.md  0004-magic-driven-version-and-endian-detection.md  0005-forbid-unsafe-panic-free-readers-fuzzing.md  0006-low-msrv-floor-decoupled-from-dev-toolchain.md  0007-tier1-validation-tsk-oracle-ufs1-gap.md  0008-deleted-item-recovery-from-residue.md  0009-optional-forensic-vfs-adapter.md
forensic/: CHANGELOG.md  Cargo.toml
forensic/src/: lib.rs
forensic/tests/: carve.rs  edge.rs  integrity.rs
forensic/tests/common/: mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cg.rs  dir.rs  file.rs  fuzz_forensic.rs  inode.rs  superblock.rs
supply-chain/: config.toml
tests/data/: README.md
