[workspace]
resolver = "2"
members = ["core", "forensic"]

# Single source of truth for fields shared (identical) by every member (DRY).
# `version` is NOT hoisted: core and forensic are versioned independently, so
# each keeps its own `version` inline.
[workspace.package]
edition = "2021"
# Declared MSRV floor, kept low as a downstream-facing promise. ufs-core's 1.75 is
# CI-verified: the `msrv` job pins 1.75.0 and runs `cargo build -p ufs-core`, whose
# prod tree is only `thiserror` (no zstd/crc dep to raise it). ufs-forensic's floor
# is asserted, not CI-exercised — its `forensicnomicon` + `sha2` deps are expected
# to build at 1.75, but the msrv job does not compile ufs-forensic.
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/SecurityRonin/ufs-forensic"
homepage = "https://github.com/SecurityRonin/ufs-forensic"
authors = ["Albert Hui <albert@securityronin.com>"]
categories = ["parser-implementations", "filesystem"]
readme = "README.md"

# Single source of truth for dependency versions (DRY): declare each once;
# members write `dep.workspace = true`. The inter-crate `ufs-core` version
# lives here too, so a bump touches one line instead of every member.
[workspace.dependencies]
ufs-core = { path = "core", version = "0.1.0" }
forensicnomicon = "1"
# forensic-vfs (KNOWLEDGE leaf) — the read-only FileSystem navigation contract
# the `vfs` feature adapts UfsFs onto. Optional; enabled by the `vfs` feature so
# a bare reader stays dependency-light.
forensic-vfs = "0.7"
thiserror = "2"
sha2 = "0.10"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all                      = { level = "warn", priority = -1 }
pedantic                 = { level = "warn", priority = -1 }
correctness              = { level = "deny", priority = -1 }
suspicious               = { level = "deny", priority = -1 }
unwrap_used              = { level = "deny", priority = 0 }
expect_used              = { level = "deny", priority = 0 }
module_name_repetitions  = { level = "allow", priority = 1 }
must_use_candidate       = { level = "allow", priority = 1 }
missing_errors_doc       = { level = "allow", priority = 1 }
missing_panics_doc       = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap       = { level = "allow", priority = 1 }
cast_sign_loss           = { level = "allow", priority = 1 }
cast_precision_loss      = { level = "allow", priority = 1 }
too_many_lines           = { level = "allow", priority = 1 }
items_after_statements   = { level = "allow", priority = 1 }
similar_names            = { level = "allow", priority = 1 }
manual_let_else          = { level = "allow", priority = 1 }
