[package]
name = "ufs-core"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure-Rust from-scratch UFS/FFS (Unix File System, Berkeley Fast File System) reader — UFS1/UFS2 superblock, cylinder groups, inodes, over any byte source"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ufs-core"
readme.workspace = true
authors.workspace = true
keywords = ["forensics", "ufs", "filesystem", "dfir", "parser"]
categories.workspace = true

# Keep the repo-root integration-test tree and the committed dfvfs oracle image
# (tests/data/ufs2.raw + the ufs2_*.bin fixtures, Apache-2.0) out of the
# published `.crate`. The integration tests `include_bytes!("../../tests/data/..")`
# from the repo root, which is not part of this crate's package dir, so shipping
# `core/tests/*.rs` would ship files that cannot compile downstream. Excluding
# `/tests` also keeps the tarball source-only and well under the ~10 MiB limit.
exclude = [
    "/fuzz",
    "/.github",
    "/docs",
    "/tests",
    "/tests/data/*.raw",
    "/tests/data/*.img",
]

# The bare `ufs` crate name on crates.io is an obscure file-embedding utility
# ("ufs embed files and read from disk", 53 downloads) unrelated to the
# filesystem, so we take the import path `ufs` (consumers write `use ufs::...`).
[lib]
name = "ufs"

[features]
# Adapt `UfsFs` to the forensic-vfs `FileSystem` trait (see `src/vfs.rs`) so a
# UFS/FFS volume composes as `Arc<dyn FileSystem>` in the forensic-vfs engine.
# Opt-in so a bare reader stays dependency-light; consumers who only want the
# parser pay no forensic-vfs cost.
vfs = ["dep:forensic-vfs"]

[dependencies]
thiserror = { workspace = true }
# forensic-vfs (KNOWLEDGE leaf) — the read-only FileSystem navigation contract.
# Optional; enabled by the `vfs` feature which turns on `impl FileSystem for
# UfsFs` so a UFS volume composes as `Arc<dyn FileSystem>`.
forensic-vfs = { workspace = true, optional = true }

[dev-dependencies]
sha2 = { workspace = true }

[lints]
workspace = true
